# shootvoxel

./: Cargo.toml  map.txt
client/: Cargo.toml
client/src/: camera.rs  character.rs  fpscounter.rs  instance.rs  main.rs  map.rs  model.rs  network.rs  shader.wgsl  texture.rs
mapgen/: Cargo.toml
mapgen/src/: main.rs
network/: Cargo.toml
network/src/: lib.rs
res/: voxel.mtl
server/: Cargo.toml
server/src/: main.rs
