[package]
name = "network"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4.0"
log = "*"
